contrast fixes

--- a/styles/index-large-mobile.css
+++ b/styles/index-large-mobile.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 500px) and (max-width: 1200px) {
     :root {
-        --color-one: rgb(23, 102, 206);
+        --color-one: rgb(124, 152, 218);
         --color-two: rgb(97,20,7);
     }
 
