--- a/styles/index-small-mobile.css
+++ b/styles/index-small-mobile.css
@@ -1,6 +1,6 @@
 
 :root {
-    --color-one: rgb(23, 102, 206);
+    --color-one: rgb(124, 152, 218);
     --color-two: rgb(97,20,7);
 }
 
